<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_aliyot"
            android:icon="@drawable/donatemancolor"
            android:title="@string/aliyot" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/msgs"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/bill"
            android:title="@string/menu_bill" />

        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/playicon"
            android:title="נגן הלכה יומית" />

        <item
            android:id="@+id/login_win"
            android:icon="@drawable/loginman"
            android:title="@string/title_activity_login" />

    </group>
</menu>
