<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.danik.bitkneset.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.danik.bitkneset.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_aliyot"
        android:name="com.danik.bitkneset.ui.aliyot.AliyotFragment"
        android:label="@string/menu_aliyot"
        tools:layout="@layout/fragment_aliyot" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.danik.bitkneset.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_bill"
        android:name="com.danik.bitkneset.ui.bill.BillFragment"
        android:label="חשבונות"
        tools:layout="@layout/fragment_bill" />

    <fragment
        android:id="@+id/nav_player"
        android:name="com.danik.bitkneset.ui.player.PlayerFragment"
        android:label="הלכה יומית"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/login_win"
        android:name="com.danik.bitkneset.ui.login.LoginFragment"
        android:label="@string/title_activity_login"
        tools:layout="@layout/fragment_login" />



</navigation>