<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp">

    <TextView
        android:id="@+id/nameLbl"
        android:layout_width="77dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:text="@string/billType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descLbl"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/descBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLbl" />

    <TextView
        android:id="@+id/amountLbl"
        android:layout_width="43dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descLbl" />

    <TextView
        android:id="@+id/dateLbl"
        android:layout_width="58dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountLbl" />

    <TextView
        android:id="@+id/typeToRV"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:text="טקסט"
        app:layout_constraintStart_toEndOf="@+id/nameLbl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descToRV"
        android:layout_width="177dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="טקסט"
        app:layout_constraintStart_toEndOf="@+id/descLbl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountToRV"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="טקסט"
        app:layout_constraintStart_toEndOf="@+id/amountLbl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateToRV"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="טקסט"
        app:layout_constraintStart_toEndOf="@+id/dateLbl"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/isPaidPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/paid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/amountToRV"
        app:layout_constraintTop_toBottomOf="@+id/isPaidLbl"
        app:srcCompat="@android:drawable/checkbox_off_background" />

    <TextView
        android:id="@+id/isPaidLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toEndOf="@+id/typeToRV"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/payUnpaidBtn"
        android:layout_width="43dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/pay"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/isPaidPic"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toEndOf="@+id/amountToRV" />

    <ImageButton
        android:id="@+id/delOrderBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@android:drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>