<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbeittrumah"
    android:theme="@style/Theme.Design.NoActionBar"
    tools:context=".TrumahEngine">

    <TextView
        android:id="@+id/cvvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="464dp"
        android:text="@string/cvv"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:text="@string/cardDetails"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTrumah"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/trumahInfo"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="182dp"
        android:layout_height="239dp"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shekelicon" />

    <TextView
        android:id="@+id/mutavText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="328dp"
        android:text="@string/forMutav"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mutavText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="424dp"
        android:text="@string/cardNumber"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expiryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="464dp"
        android:text="@string/expiry"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kesefText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="356dp"
        android:text="@string/amountForCard"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mutavExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="328dp"
        android:text="@string/recV"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/mutavText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zuzimExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/recV"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/kesefText"
        app:layout_constraintTop_toBottomOf="@+id/mutavExtra" />

    <EditText
        android:id="@+id/cardNumberEditText"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:layout_marginTop="420dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/mutavText4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cvvEditText"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cvvText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sendPaymentBtn"
        android:layout_width="84dp"
        android:layout_height="88dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvText"
        app:srcCompat="@drawable/truepic" />

    <ImageButton
        android:id="@+id/sendLaterBtn"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvText"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <EditText
        android:id="@+id/expiryDateEditText"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="460dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:foregroundTint="@color/colorPrimary"
        android:inputType="date"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/expiryText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/finishActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:contentDescription="לחזרה אחרי מהלך תשלום"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvText"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>